--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "axios": "^1.12.2",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "pg-promise": "^12.1.3"
+    "pg-promise": "^12.1.3",
+    "playwright": "^1.55.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
